--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>hello-world</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
