--- a/springBootHelloWorld.yml
+++ b/springBootHelloWorld.yml
@@ -29,6 +29,7 @@ spec:
   type: NodePort
   ports:
     - port: 8080
+      nodePort: 8090
       targetPort: 8080
   selector:
     name: helloworld
